Add metrics and monitoring with Actuator, Prometheus and Grafana

--- a/monolith/src/main/resources/application-dev.properties
+++ b/monolith/src/main/resources/application-dev.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.com.sasps.hotelbooking=TRACE
 logging.level.org.springframework.security=DEBUG
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
