--- a/monolith/src/main/resources/application-prod.properties
+++ b/monolith/src/main/resources/application-prod.properties
@@ -24,3 +24,6 @@ server.error.include-exception=false
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=when-authorized
+management.metrics.tags.environment=production
