--- a/monolith/src/main/resources/application.properties
+++ b/monolith/src/main/resources/application.properties
@@ -61,3 +61,21 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.architecture=monolithic
+management.metrics.tags.environment=${spring.profiles.active:default}
+
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.slo.http.server.requests=50ms,100ms,200ms,500ms,1s
+
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+management.metrics.enable.system=true
+
+spring.jpa.properties.hibernate.generate_statistics=false
