Minor bug fixes after testing

--- a/microservices/booking-service/Dockerfile
+++ b/microservices/booking-service/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM maven:3.9.5-eclipse-temurin-17-alpine AS build
+FROM maven:3.9.5-eclipse-temurin-17 AS build
 WORKDIR /app
 
 # Copy booking-service
@@ -10,10 +10,8 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Runtime stage
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-jre
 WORKDIR /app
-
-RUN apk add --no-cache curl
 
 COPY --from=build /app/target/*.jar app.jar
 
