--- a/microservices/room-service/src/main/resources/application.properties
+++ b/microservices/room-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -19,6 +19,8 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-version=0
+spring.flyway.validate-on-migrate=false
+spring.flyway.table=flyway_schema_history_room
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
