Add infrastructure, testing, and operational support
- add metrics and monitoring with Actuator, Prometheus, and Grafana;
- add full Docker support;
- add API testing tools, including a Postman collection, a bash script, and k6 support;
- add a bash script for development metrics;
- add a placeholder implementation for User Service.

--- a/microservices/booking-service/src/main/resources/application.properties
+++ b/microservices/booking-service/src/main/resources/application.properties
@@ -29,8 +29,10 @@ feign.client.config.default.logger-level=basic
 feign.okhttp.enabled=true
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
 
 # Logging Configuration
 logging.level.root=INFO
