--- a/microservices/room-service/src/main/resources/application.properties
+++ b/microservices/room-service/src/main/resources/application.properties
@@ -23,8 +23,10 @@ spring.flyway.validate-on-migrate=false
 spring.flyway.table=flyway_schema_history_room
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
 
 # Logging Configuration
 logging.level.root=INFO
