--- a/microservices/user-service/pom.xml
+++ b/microservices/user-service/pom.xml
@@ -13,10 +13,10 @@
     </parent>
 
     <groupId>com.sasps</groupId>
-    <artifactId>booking-service</artifactId>
+    <artifactId>user-service</artifactId>
     <version>1.0.0</version>
-    <name>Booking Service</name>
-    <description>Booking and Reservation Management Service</description>
+    <name>User Service</name>
+    <description>Authentication and User Management Service</description>
 
     <properties>
         <java.version>17</java.version>
@@ -40,11 +40,6 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
@@ -52,18 +47,6 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
-        </dependency>
-
-        <!-- Spring Cloud OpenFeign for REST clients -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
-        <!-- Feign OkHttp for PATCH support -->
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-okhttp</artifactId>
         </dependency>
 
         <!-- PostgreSQL Driver -->
@@ -86,14 +69,12 @@
             <optional>true</optional>
         </dependency>
 
-
         <!-- Springdoc OpenAPI -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
-
 
         <!-- Testing -->
         <dependency>
@@ -137,16 +118,8 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 </project>
-
