--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-# Application Configuration
-spring.application.name=payment-service
-server.port=8084
+spring.application.name=user-service
+server.port=8081
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://db-cluster:5432/hotel_booking_db
@@ -20,7 +19,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-version=0
 spring.flyway.validate-on-migrate=false
-spring.flyway.table=flyway_schema_history_payment
+spring.flyway.table=flyway_schema_history_user
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
@@ -28,13 +27,6 @@ management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
 
-# Logging Configuration
+# Logging
 logging.level.root=INFO
-logging.level.com.sasps.paymentservice=DEBUG
-logging.level.org.springframework.web=INFO
-
-# OpenAPI Configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
-
+logging.level.com.sasps.userservice=DEBUG
