--- a/microservices/frontend-service/nginx.conf
+++ b/microservices/frontend-service/nginx.conf
@@ -1,22 +1,17 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
 
-  # Serve React build (SPA)
-  root /usr/share/nginx/html;
-  index index.html;
+    location /api_room_service/ {
+        proxy_pass http://room-service:8082/api/;
+    }
 
-  location / {
-    try_files $uri /index.html;
-  }
+    location /api_booking_service/ {
+        proxy_pass http://booking-service:8083/api/;
+    }
 
-  location /api/ {
-    proxy_pass http://room-service:8082/api;
-
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
+    }
 }
