--- a/microservices/prometheus.yml
+++ b/microservices/prometheus.yml
@@ -7,6 +7,16 @@ global:
     environment: 'development'
 
 scrape_configs:
+  - job_name: 'auth-service'
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    scrape_timeout: 4s
+    static_configs:
+      - targets: ['auth-service:8080']
+        labels:
+          application: 'auth-service'
+          architecture: 'microservices'
+
   - job_name: 'room-service'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
